--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "gulp-handlebars": "^3.0.1",
     "gulp-wrap": "^0.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "gulp-scss-lint": "^0.1.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
