--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-scss-lint": "^0.1.10"
   },
   "scripts": {
